//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table organizations {
  organization_id String [pk]
  arranger arrangers [not null]
  arranger_id String [unique, not null]
  name String [not null]
  org_nr String [not null]
  image String
  organization_roles user_organization_roles [not null]
}

Table users {
  user_id String [pk]
  arranger arrangers
  arranger_id String [unique]
  phone String [unique, not null]
  first_name String [not null]
  last_name String
  email String [unique, not null]
  image String
  birth_date DateTime
  organization_roles user_organization_roles [not null]
  registrations registrations [not null]
}

Table user_organization_roles {
  organization_id String [not null]
  user_id String [not null]
  organization organizations [not null]
  user users [not null]
  role organization_roles [not null]

  indexes {
    (organization_id, user_id) [pk]
  }
}

Table arrangers {
  arranger_id String [pk]
  is_business Boolean [not null]
  organization organizations
  user users
  event_arrangers event_arrangers [not null]
}

Table events {
  event_id Int [pk, increment]
  start_date DateTime [not null]
  end_date DateTime [not null]
  title String [not null]
  description String [not null]
  capacity Int
  private Boolean [not null, default: false]
  event_arrangers event_arrangers [not null]
  registrations registrations [not null]
}

Table event_arrangers {
  event_id Int [pk]
  event events [not null]
  arranger_id String [not null]
  arranger arrangers [not null]
  role event_arranger_roles [not null]
}

Table registrations {
  event_id Int [not null]
  event events [not null]
  user_id String [not null]
  user users [not null]
  reg_date DateTime [not null]
  reg_status reg_status [not null]
  attendance Boolean [not null]

  indexes {
    (event_id, user_id) [pk]
  }
}

Enum organization_roles {
  ADMIN
}

Enum event_arranger_roles {
  ADMIN
  COLLABORATOR
}

Enum reg_status {
  PENDING
  COMPLETE
}

Ref: organizations.arranger_id - arrangers.arranger_id

Ref: users.arranger_id - arrangers.arranger_id

Ref: user_organization_roles.organization_id > organizations.organization_id

Ref: user_organization_roles.user_id > users.user_id

Ref: event_arrangers.event_id > events.event_id

Ref: event_arrangers.arranger_id > arrangers.arranger_id

Ref: registrations.event_id > events.event_id

Ref: registrations.user_id > users.user_id